Describe your change here

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,12 @@
 
 VITE_SUPABASE_URL=
 VITE_SUPABASE_ANON_KEY=
+
+# Optional: canonical/social base URL (e.g. for production subdomain).
+# When set, canonicals and og:image URLs use this instead of window.location.origin.
+# Example: https://ucat.theukcatpeople.co.uk
+VITE_SITE_URL=
+
+# Mailchimp (Edge Function secrets - set via Supabase Dashboard or CLI, not here):
+# MAILCHIMP_API_KEY=your-mailchimp-api-key
+# MAILCHIMP_LIST_ID=your-audience-list-id
